can only render in Blender 2.79 "blender renderer". #60627

Closed
opened 2019-01-18 17:21:47 +01:00 by Ian Cameron · 6 comments

System Information
AMD Threadripper 2990wx (32 cores)
Gigabyte X399 Aorus Extreme
64Gb Corsair Quad Ram

Operating system:
Windows 10 x64

Graphics card:
Asus Titan X x2 + MSI Titan X x2

Blender Version
Broken: 2.79b release or 2.80 Alpha

Short description of error
No error messages

Exact steps for others to reproduce the error
Any blender example file from your site

This happans after a fresh install of windows 10 before updates and with ONLY the latest Nvidia drivers.

If, for example, I try and render the BMW test file the render box appears at 0% and never increases. I have to use TaskManager to ext blend at this point. This happens in Cycles or Eevee. This means I cannot render in 2.8 (todays build) at all. I can only render in "2.79b(stable) blender renderer" not cycles.

If I update windows 10 fully this still happens.

Now the odd thing. If I try and run CINEBENCH_R15 then both cpu and gpu test work fine. If I run IndigoBenchmark x64 this too works fine and I can run games such as "Shadow of the Tomb Raider" or "Project Cars 2" these games work fine too.

I hope you can help.
Ian

**System Information** AMD Threadripper 2990wx (32 cores) Gigabyte X399 Aorus Extreme 64Gb Corsair Quad Ram Operating system: Windows 10 x64 Graphics card: Asus Titan X x2 + MSI Titan X x2 **Blender Version** Broken: 2.79b release or 2.80 Alpha **Short description of error** No error messages **Exact steps for others to reproduce the error** Any blender example file from your site This happans after a fresh install of windows 10 before updates and with ONLY the latest Nvidia drivers. If, for example, I try and render the BMW test file the render box appears at 0% and never increases. I have to use TaskManager to ext blend at this point. This happens in Cycles or Eevee. This means I cannot render in 2.8 (todays build) at all. I can only render in "2.79b(stable) blender renderer" not cycles. If I update windows 10 fully this still happens. Now the odd thing. If I try and run CINEBENCH_R15 then both cpu and gpu test work fine. If I run IndigoBenchmark x64 this too works fine and I can run games such as "Shadow of the Tomb Raider" or "Project Cars 2" these games work fine too. I hope you can help. Ian
Author

Added subscriber: @Windybut

Added subscriber: @Windybut

This issue was referenced by 08871b56bc

This issue was referenced by 08871b56bc4db884ce127deb0ea247e740efe813

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

I just got Blender 2.80 todays build and it seems thta its all fixed now. BMW in Cycles or Eevee works fine now :)

I just got Blender 2.80 todays build and it seems thta its all fixed now. BMW in Cycles or Eevee works fine now :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-01-19 11:00:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60627
No description provided.