Fix T60627: Cycles render hanging on Windows with threadripper CPU.